# zerosum0x0_SassyKitdi

./: README.md  assembly.txt
src/: .gitignore  makeminidump.py  shellcode.py  socketdump.py
src/common/ntdef/: Cargo.toml
src/common/ntdef/src/: enums.rs  functions.rs  lib.rs  macros.rs  pe.rs  status.rs  structs.rs  types.rs
src/common/ntmem/: Cargo.toml
src/common/ntmem/src/: lib.rs
src/common/ntproc/: Cargo.toml
src/common/ntproc/src/: lib.rs
src/common/ntstr/: Cargo.toml
src/common/ntstr/src/: lib.rs
src/common/nttdi/: Cargo.toml
src/common/nttdi/src/: lib.rs
src/common/resolver/: Cargo.toml
src/common/resolver/src/: hash.rs  lib.rs
src/payloads/sassykitdi/: Cargo.toml  build.sh  inspect.sh  pyit.sh
src/payloads/sassykitdi/.cargo/: config
src/payloads/sassykitdi/src/: lib.rs
