[package]
name = "ntproc"
version = "0.1.0"
authors = ["zerosum0x0 <zerosum0x0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.37"
quote = "1.0.7"
ntdef =   { path = "../ntdef", version = "0.1.0" }
#stacklstr = { git = "https://github.com/jmage-rs/stacklstr.git" }
resolver    =   { path = "../../common/resolver",   version = "0.1.0" }