[package]
name = "reverse_tcp_tdi"
version = "0.1.0"
authors = ["zerosum0x0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reverse_tcp_tdi"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 'z' # optimize for size
lto = true  # link time optimize
codegen-units = 1
panic = "abort"
debuginfo = 0

[profile.release]
opt-level = 'z' # optimize for size
lto = true  # link time optimize
codegen-units = 1
panic = "abort"
debuginfo = 0

[dependencies]
ntdef       =   { path = "../../common/ntdef",      version = "0.1.0" }
ntstr       =   { path = "../../common/ntstr",   version = "0.1.0" }
ntproc       =   { path = "../../common/ntproc",   version = "0.1.0" }
nttdi      =   { path = "../../common/nttdi",     version = "0.1.0" }
ntmem      =   { path = "../../common/ntmem",     version = "0.1.0" }
resolver    =   { path = "../../common/resolver",   version = "0.1.0" }
